--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -5,7 +5,7 @@ body{
 	font-family: "Helvetica Neue", Arial, sans-serif;
 	font-size: 16px;
 	background-color: #000;
-	color: #f6edee;
+	color: #f3e7ef;
 }
 #topbar{
 	background-color: #000;
@@ -39,8 +39,8 @@ body{
 .lead{
 	font-size: 24px;
 	font-family: 'Times New Roman', serif;
-	margin-top: 20px;
-	margin-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 12px;
 }
 .smaller{
 	font-size: 16px;
@@ -64,8 +64,8 @@ h1{
 	font-family: 'Times New Roman', serif;
 }
 h2{
-	margin-top: 40px;
-	margin-bottom: 0;
+	margin-top: 30px;
+	margin-bottom: 30px;
 	padding-bottom: 0;
 	font-size: 28px;
 	font-family: 'Times New Roman', serif;
@@ -98,12 +98,12 @@ p{
 	margin-bottom: 6px;
 }
 a{
-	color: #ac2336;
+	color: #da2e4a;
 	text-decoration: none;
 }
 a:hover{
 	text-decoration: underline;
-	color: #ac2336;
+	color: #da2e4a;
 }
 #topbar a, #footer a{
 	color: #fff;
@@ -112,32 +112,6 @@ a:hover{
 }
 #footer a{
 	font-weight: normal;
-}
-
-#map{
-	height: 400px;
-	width: 100%;
-	background-color: #e6e6e6;
-	margin-top: 0;
-}
-#layerlinks{
-	background-color: #fff;
-	text-align: right;
-	padding-right: 24px;
-	padding-top: 8px;
-	font-size: 12px;
-}
-.personblock{
-	background-color: #e9e9e9;
-	padding: 20px;
-	margin-top: 24px;
-	border-top-left-radius: 20px;
-}
-.explanationblock{
-	background-color: #f2b3bf;
-	padding: 20px;
-	margin-top: 24px;
-	border-top-left-radius: 20px;
 }
 
 #footer{
@@ -163,14 +137,3 @@ img{
 }
 button:focus, input:focus, .btn-primary:focus {
 }
-#logoos img{
-	width: 80px;
-	margin-right: 16px;
-}
-.smalladdress{
-	margin-top: 14px;
-	color: #aaaaaa;
-}
-.smalladdress a{
-}
-
