--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -52,9 +52,11 @@ body{
 .onderschrift{
 	font-size: 14px;
 	line-height: 1.3;
-	margin-top: -6px;
+	margin-top: 4px;
 }
-
+iframe{
+	margin-top: 18px;
+}
 
 h1{
 	margin-top: 10px;
