some content and styles

--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -12,7 +12,7 @@ body{
 	color: #fff;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-bottom: 0;
+	margin-bottom: 20px;
 }
 #navbar{
 	text-align: right;
@@ -37,8 +37,7 @@ body{
 	color: #fff;
 }
 .lead{
-	font-size: 24px;
-	font-family: 'Times New Roman', serif;
+	font-size: 26px;
 	margin-top: 0;
 	margin-bottom: 12px;
 }
@@ -62,7 +61,7 @@ h1{
 	margin-top: 10px;
 	margin-bottom: 14px;
 	padding-bottom: 12px;
-	font-size: 36px;
+	font-size: 42px;
 	font-family: 'Times New Roman', serif;
 }
 h2{
@@ -73,10 +72,10 @@ h2{
 	font-family: 'Times New Roman', serif;
 }
 h3{
-	margin-top: 0;
+	margin-top: 24px;
 	padding-top: 12px;
 	padding-bottom: 6px;
-	font-size: 24px;
+	font-size: 32px;
 	font-family: 'Times New Roman', serif;
 	border-top: 2px dotted #847d7e;
 }
@@ -117,7 +116,8 @@ a:hover{
 }
 
 #footer{
-	background-color: #646464;
+	background-color: #000;
+	border-top: 2px solid #da2e4a;
 	margin-top: 12px;
 	padding-top: 32px;
 	padding-bottom: 40px;
